--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.6.0",
     "express": "^4.21.2",
     "google-auth-library": "^10.1.0",
     "jsonwebtoken": "^9.0.2",
