--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^8.10.1",
     "multer": "^2.0.1",
     "nodemailer": "^7.0.4",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "razorpay": "^2.9.6"
   }
 }
