--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "node-cron": "^4.2.0",
     "nodemailer": "^7.0.4",
     "path": "^0.12.7",
+    "pdfkit": "^0.17.2",
     "razorpay": "^2.9.6",
     "twilio": "^5.7.2"
   }
